--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ body {
 	margin-right: 75px;
 }
 
+
 .container{
 	
 	width: 100%;
@@ -53,6 +54,53 @@ body {
 	padding-top: 100px;
 
   }
+
+.intro{
+	width: 100%;
+	height: 100vh;
+	flex-wrap: wrap;
+	padding-top: 100px;
+}
+
+.intro .unterricht{
+	width: 70%;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	text-align: right;
+	padding: 0px 120px 0px 0px;
+	height: auto;
+	padding-bottom: 50px;
+
+
+}
+
+.intro .preise{
+	width: 70%;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	text-align: right;
+	padding: 0px 120px 0px 0px;
+	height: auto;
+	padding-bottom: 50px;
+
+}
+
+.intro .kontakt{
+	width: 70%;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	text-align: right;
+	padding: 0px 120px 0px 0px;
+	height: auto;
+	padding-bottom: 50px;
+
+
+
+}
+
 
   
 .container .left-side{
@@ -378,11 +426,49 @@ overlay
 	align-items: center;
 	justify-content: flex-end;
 	color: gold;
+	font-weight: 100;
+	margin-right: 20px;
+	font-family: 'Work sans';
+	z-index: 10; /* Add a z-index to ensure it stays above other elements */
+  }
+  
+  .container {
+	min-height: 100vh; /* Set a minimum height for the container to push the footer to the bottom */
+	position: relative; /* Add relative positioning to make absolute positioning in the next step work properly */
+  }
+  
+  .footer {
+	position: absolute; /* Change from fixed to absolute */
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 52px;
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	color: gold;
+	font-weight: 100;
+	margin-right: 20px;
+	font-family: 'Work sans';
+	z-index: 10;
+  }
+  
+/*
+.footer {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 52px;
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+	color: gold;
 	font-weight:100;
 	margin-right: 20px;
 	font-family: 'Work sans';
   }
-
+*/
 /* ====================================
 Animation keyframes
 ==================================== */
