--- a/styles.css
+++ b/styles.css
@@ -416,8 +416,13 @@ overlay
 	animation: animate-out-middle-bar .6s linear 1 both
 }
 
-.footer {
-	position: fixed;
+.container {
+	min-height: calc(100vh - 52px); /* Subtract the footer height from the viewport height */
+	position: relative;
+  }
+  
+  .footer {
+	position: absolute; /* Keep the absolute positioning for the footer */
 	bottom: 0;
 	left: 0;
 	right: 0;
@@ -429,12 +434,7 @@ overlay
 	font-weight: 100;
 	margin-right: 20px;
 	font-family: 'Work sans';
-	z-index: 10; /* Add a z-index to ensure it stays above other elements */
-  }
-  
-  .container {
-	min-height: 100vh; /* Set a minimum height for the container to push the footer to the bottom */
-	position: relative; /* Add relative positioning to make absolute positioning in the next step work properly */
+	z-index: 10;
   }
   
 
