--- a/styles.css
+++ b/styles.css
@@ -26,8 +26,13 @@ body {
 
 .home.bgimage {
 	background-image: url(./bc.jpeg);
-	background-size: cover;
-	background-position: center center;
+  	background-size: cover;
+  	background-position: center center;
+  	width: 100%;
+  	height: 100vh;
+  	position: relative;
+  	display: flex;
+  	flex-wrap: wrap;
 }
 
 .info {
