--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,20 @@ body {
 	height: 100vh;
 	flex-wrap: wrap;
 	padding-top: 100px;
+	margin-left: 10px;
+}
+
+.intro > div{
+	border: 2px solid gold;
+	border-radius: 8px;
+	padding: 10px;
+	box-shadow: 0 0 10px rgba(29, 29, 29, 0.1);
+}
+
+.fa-solid.fa-guitar{
+	
+	margin-right: 5px;
+	
 }
 
 .intro .unterricht{
@@ -73,11 +87,7 @@ body {
 	flex-direction: column;
 	align-items: flex-end;
 	text-align: right;
-	padding: 0px 120px 0px 0px;
 	height: auto;
-	padding-bottom: 50px;
-
-
 }
 
 .intro .preise{
@@ -86,9 +96,7 @@ body {
 	flex-direction: column;
 	align-items: flex-end;
 	text-align: right;
-	padding: 0px 120px 0px 0px;
 	height: auto;
-	padding-bottom: 50px;
 
 }
 
@@ -98,11 +106,7 @@ body {
 	flex-direction: column;
 	align-items: flex-end;
 	text-align: right;
-	padding: 0px 120px 0px 0px;
 	height: auto;
-	padding-bottom: 50px;
-
-
 
 }
 
@@ -603,6 +607,7 @@ Animation keyframes
 	  text-align: left;
 	  align-items: flex-start;
 	}
+
   
 	.intro .unterricht,
 	.intro .preise,
@@ -610,7 +615,10 @@ Animation keyframes
 	  width: 100%;
 	  padding: 0 20px;
 	  text-align: left;
+	  
 	}
+
+	
   
 	.home a {
 	  top: 20px;
@@ -636,6 +644,10 @@ Animation keyframes
 	.intro .kontakt {
 	  padding-bottom: 30px;
 	}
+
+	.home.bgimage {
+    background-size: cover;
+  }
   
 	.container .left-side .item {
 	  margin-bottom: 30px;
