--- a/styles.css
+++ b/styles.css
@@ -60,57 +60,49 @@ body {
 
   }
 
-.intro{
-	width: 100%;
-	height: 100vh;
+  .intro {
+	display: flex;
 	flex-wrap: wrap;
+	width: 99%;
+	height: 100vh;
 	padding-top: 100px;
 	margin-left: 10px;
-}
-
-.intro > div{
+	
+  }
+  
+  .intro-left {
+	width: 70%;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+  }
+  
+  .intro-left .unterricht,
+  .intro-left .preise,
+  .intro-left .kontakt {
+	flex-direction: column;
+	align-items: center;
 	border: 2px solid gold;
 	border-radius: 8px;
 	padding: 10px;
-	box-shadow: 0 0 10px rgba(29, 29, 29, 0.1);
-}
+  }
+  
+  .intro-right {
+	position: relative; /* Relative positioning for overlay */
+	width: 30%;
+	max-height: 90%;
+	border: 2px solid gold;
+	border-radius: 8px;
+	overflow: hidden; /* Hide overflow content (overlay) */
+  }
 
-.fa-solid.fa-guitar{
-	
-	margin-right: 5px;
-	
-}
-
-.intro .unterricht{
-	width: 70%;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-end;
-	text-align: right;
+  .intro-right img {
+	width: 100%;
+	max-width: 100%;
 	height: auto;
-}
-
-.intro .preise{
-	width: 70%;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-end;
-	text-align: right;
-	height: auto;
-
-}
-
-.intro .kontakt{
-	width: 70%;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-end;
-	text-align: right;
-	height: auto;
-
-}
-
-
+	display: block; /* Remove bottom margin for inline images */
+	user-select: none; /* Disable text selection */
+  }
   
 .container .left-side{
 	width: 50%;
@@ -129,7 +121,7 @@ body {
 .container .left-side .item h3{
 	letter-spacing: 2px;
 	margin-bottom: 20px;
-	/*color: #ffd700; */
+	
   }
 
 
@@ -151,6 +143,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 530px;
+  
   
 }
 
@@ -213,6 +207,12 @@ body {
   font-weight:700;
 }
 [type="submit"]:hover { background:#ffd700; }
+
+.fa-solid.fa-guitar{
+	
+	margin-right: 5px;
+	
+}
 
 
 /* ====================================
@@ -424,12 +424,12 @@ overlay
 .animate-out-middle-bar {
 	animation: animate-out-middle-bar .6s linear 1 both
 }
-
+/*
 .container {
-	min-height: calc(100vh - 52px); /* Subtract the footer height from the viewport height */
+	min-height: calc(100vh - 52px); 
 	position: relative;
-  }
-  
+  } 
+  */
   .footer {
 	position: absolute; /* Keep the absolute positioning for the footer */
 	bottom: 0;
@@ -594,79 +594,66 @@ Animation keyframes
 	border-bottom: 1px solid gold;
 }
 
-@media (max-width: 768px) {
-	.info {
-	  margin-left: 20px;
-	  margin-right: 20px;
+@media only screen and (max-width: 768px) {
+	/* Mobile-friendly styles go here */
+  
+	body {
+	  margin: 0; /* Remove default margin */
+	}
+  
+	.home,
+	.home.bgimage,
+	.info,
+	.container,
+	.intro {
+	  margin-left: 0;
+	  margin-right: 0;
+	}
+  
+	.intro-left {
+	  width: 100%;
+	}
+  
+	.intro-right {
+	  
+	  margin-top: 20px; /* Adjust spacing between intro-left and intro-right on small screens */
+	 	
+	  max-width: 100%; /* Ensure the image doesn't exceed its original size */
+  	  max-height: 100%;
 	}
   
 	.container .left-side,
 	.container .right-side {
 	  width: 100%;
 	  padding: 0 20px;
+	  box-sizing: border-box;
+	}
+  
+	.container .left-side {
+	  align-items: flex-start; /* Align items to the start on small screens */
 	  text-align: left;
-	  align-items: flex-start;
+	  height: auto; /* Adjust height as needed */
 	}
-
-  
-	.intro .unterricht,
-	.intro .preise,
-	.intro .kontakt {
-	  width: 100%;
-	  padding: 0 20px;
-	  text-align: left;
-	  
-	}
-
-	
-  
-	.home a {
-	  top: 20px;
-	  left: 20px;
-	}
-
-	.footer {
-		display: none; 
-	  }
-  }
-  
-  @media (max-width: 640px) {
-	.container .left-side,
-	.container .right-side,
-	.intro .unterricht,
-	.intro .preise,
-	.intro .kontakt {
-	  padding: 0 10px;
-	}
-  
-	.intro .unterricht,
-	.intro .preise,
-	.intro .kontakt {
-	  padding-bottom: 30px;
-	}
-
-	.home.bgimage {
-    background-size: cover;
-  }
   
 	.container .left-side .item {
-	  margin-bottom: 30px;
+	  margin-bottom: 30px; /* Adjust spacing between items on small screens */
 	}
   
-	nav ul li {
-	  flex-basis: 50%;
+	.container .right-side {
+	  align-items: center;
+	  height: auto; /* Adjust height as needed */
 	}
   
-	nav li a:before {
-	  width: 50px;
+	[type="submit"] {
+	  font-size: 20px; /* Adjust font size for submit button on small screens */
 	}
   
-	.open-overlay {
-	  right: 1rem;
+	.fa-solid.fa-guitar {
+	  margin-right: 0;
 	}
-
-	.footer {
-		display: none; 
-	  }
+  
+	.footer{
+		display: none;
+	}
   }
   
