--- a/styles.css
+++ b/styles.css
@@ -88,22 +88,37 @@ body {
   }
   
   .intro-right {
-	position: relative; /* Relative positioning for overlay */
+	position: relative;
 	width: 30%;
 	max-height: 90%;
 	border: 2px solid gold;
 	border-radius: 8px;
-	overflow: hidden; /* Hide overflow content (overlay) */
+	overflow: hidden;
+	display: flex;
+	align-items: stretch; /* Ensure children stretch to the height of the container */
   }
 
+   
   .intro-right img {
 	width: 100%;
-	max-width: 100%;
-	height: auto;
-	display: block; /* Remove bottom margin for inline images */
-	user-select: none; /* Disable text selection */
+	height: 100%;
+	object-fit: cover; /* Maintain aspect ratio and cover the entire container */
+	display: block;
+	user-select: none;
   }
-  
+
+
+
+  .overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: transparent;
+	pointer-events: none;
+  }
+
 .container .left-side{
 	width: 50%;
 	display: flex;
